Implemented 'Edit' button, added 'Save edit' functional to wiki page

--- a/encyclopedia/templates/encyclopedia/404.html
+++ b/encyclopedia/templates/encyclopedia/404.html
@@ -11,6 +11,10 @@
     <h1> 404 </h1>
     <h3> Not Found </h3>
     <h5> The resource requested could not be found on this server! </h5>
+<!--    <form action="{% url 'index'%}" method="POST" id="back">-->
+<!--        {%csrf_token%}-->
+<!--        <input  type="submit" value="Back to home">-->
+<!--    </form>-->
 </div>
 </body>
 </html>
